styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'DIN';
  src: url('../DIN-1451.ttf');
}

@font-face {
  font-family: 'DIN-Mono';
  src: url('../DIN-Mono.ttf');
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: 'DIN', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  line-height: 1.3;
}

a {
  color: inherit;
  opacity: 0.9;
  text-decoration: none;
}

a:hover {
  color:#E34234;
}

* {
  box-sizing: border-box;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
    color: white;
    background: black;
  }
}

.header, .header img {
  width: calc(min(35vw, 40vh));
}

.emph {
  color: #E34234;
}

.surname {
  color: #E34234;
  font-family: 'Montserrat', sans-serif !important;
  width: calc(min(16vw, 20vh));
  font-size: calc(min(15vw, 16vh));
  line-height: 1;
}

.spacing {
  width: calc(min(5vw, 4vh));
}

.logo {
  position: relative;
  width: calc(min(7vw, 8vh));
}

.icon-t {
  position: absolute;
  top: 0;
}

.icon-b {
  position: absolute;
  bottom: 0;
}

.nav {
  font-family: 'DIN-Mono';
}

